<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="18dp"
    >

    <ImageView
        android:id="@+id/img_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_produto" />

    <TextView
        android:id="@+id/tv_nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_produto"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/img_produto"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preco"
        app:layout_constraintTop_toBottomOf="@+id/img_produto"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
/>
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        app:layout_constraintTop_toBottomOf="@+id/tv_nomeProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>

