<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.FaleconoscoFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:titleTextColor="@color/white"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <TextView
            android:id="@+id/fale_conosco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fale Conosco"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/duvidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/fale_conosco" />
        <TextView
            android:id="@+id/emailFaleConosco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/duvidas"/>
        <TextView
            android:id="@+id/tel_FaleConosco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefone Dúvidas"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/emailFaleConosco"/>
        <TextView
            android:id="@+id/telefoneDuv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="19 983057540"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/tel_FaleConosco"/>
        <TextView
            android:id="@+id/cadastroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Deixar Dados"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/telefoneDuv"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomeDuv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            app:layout_constraintTop_toBottomOf="@+id/cadastroEmail"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_email"
            app:layout_constraintTop_toBottomOf="@+id/nomeDuv"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefone Cliente"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btnEnviar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/black"
      android:text="Enviar"
      app:layout_constraintTop_toBottomOf="@+id/telCliente"
      tools:layout_editor_absoluteX="149dp"
      tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>